Code formatting and style improvements
- Applied consistent code formatting across all test files
- Updated quote style from single to double quotes for consistency
- Improved code readability with proper spacing and indentation
- Enhanced CI/CD workflow formatting
- Updated monitoring configuration formatting
- Improved deployment documentation structure
- Applied consistent formatting to Kubernetes manifests
- Enhanced code maintainability and readability

All changes maintain functionality while improving code quality and consistency.

--- a/backend/package.json
+++ b/backend/package.json
@@ -16,7 +16,12 @@
     "lint": "eslint src/**/*.ts",
     "lint:fix": "eslint src/**/*.ts --fix"
   },
-  "keywords": ["ar", "talking-head", "sync-api", "mobile-app"],
+  "keywords": [
+    "ar",
+    "talking-head",
+    "sync-api",
+    "mobile-app"
+  ],
   "author": "TalkAR Team",
   "license": "MIT",
   "dependencies": {
@@ -59,15 +64,22 @@
   "jest": {
     "preset": "ts-jest",
     "testEnvironment": "node",
-    "testMatch": ["**/tests/**/*.test.ts"],
+    "testMatch": [
+      "**/tests/**/*.test.ts"
+    ],
     "collectCoverageFrom": [
       "src/**/*.ts",
       "!src/**/*.d.ts",
       "!src/tests/**/*"
     ],
     "coverageDirectory": "coverage",
-    "coverageReporters": ["text", "lcov", "html"],
-    "setupFilesAfterEnv": ["<rootDir>/src/tests/setup.ts"]
+    "coverageReporters": [
+      "text",
+      "lcov",
+      "html"
+    ],
+    "setupFilesAfterEnv": [
+      "<rootDir>/src/tests/setup.ts"
+    ]
   }
 }
-
