--- a/monitoring/prometheus.yml
+++ b/monitoring/prometheus.yml
@@ -6,28 +6,28 @@ rule_files:
   - "talkar_rules.yml"
 
 scrape_configs:
-  - job_name: 'prometheus'
+  - job_name: "prometheus"
     static_configs:
-      - targets: ['localhost:9090']
+      - targets: ["localhost:9090"]
 
-  - job_name: 'talkar-backend'
+  - job_name: "talkar-backend"
     static_configs:
-      - targets: ['talkar-backend-service:3000']
-    metrics_path: '/metrics'
+      - targets: ["talkar-backend-service:3000"]
+    metrics_path: "/metrics"
     scrape_interval: 10s
 
-  - job_name: 'talkar-frontend'
+  - job_name: "talkar-frontend"
     static_configs:
-      - targets: ['talkar-frontend-service:3000']
-    metrics_path: '/metrics'
+      - targets: ["talkar-frontend-service:3000"]
+    metrics_path: "/metrics"
     scrape_interval: 10s
 
-  - job_name: 'postgres'
+  - job_name: "postgres"
     static_configs:
-      - targets: ['talkar-postgres-service:5432']
+      - targets: ["talkar-postgres-service:5432"]
     scrape_interval: 30s
 
-  - job_name: 'kubernetes-pods'
+  - job_name: "kubernetes-pods"
     kubernetes_sd_configs:
       - role: pod
     relabel_configs:
@@ -38,7 +38,8 @@ scrape_configs:
         action: replace
         target_label: __metrics_path__
         regex: (.+)
-      - source_labels: [__address__, __meta_kubernetes_pod_annotation_prometheus_io_port]
+      - source_labels:
+          [__address__, __meta_kubernetes_pod_annotation_prometheus_io_port]
         action: replace
         regex: ([^:]+)(?::\d+)?;(\d+)
         replacement: $1:$2
@@ -56,4 +57,4 @@ alerting:
   alertmanagers:
     - static_configs:
         - targets:
-          - alertmanager:9093
+            - alertmanager:9093
