--- a/backend/package.json
+++ b/backend/package.json
@@ -37,6 +37,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "pg": "^8.11.3",
+    "react-scripts": "^5.0.1",
     "sequelize": "^6.35.1",
     "uuid": "^9.0.1"
   },
