--- a/mobile-app/app/build.gradle
+++ b/mobile-app/app/build.gradle
@@ -79,6 +79,9 @@ dependencies {
     implementation 'androidx.room:room-ktx:2.6.1'
     ksp 'androidx.room:room-compiler:2.6.1'
     
+    // Gson for TypeConverters
+    implementation 'com.google.code.gson:gson:2.10.1'
+    
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
