--- a/admin-dashboard/package.json
+++ b/admin-dashboard/package.json
@@ -6,24 +6,25 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@hookform/resolvers": "^3.3.2",
     "@mui/icons-material": "^5.15.0",
     "@mui/material": "^5.15.0",
     "@mui/x-data-grid": "^6.18.0",
     "@reduxjs/toolkit": "^2.0.1",
+    "@types/react": "^18.2.42",
+    "@types/react-dom": "^18.2.17",
+    "ajv": "^8.17.1",
+    "axios": "^1.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
+    "react-hook-form": "^7.48.2",
     "react-redux": "^9.0.4",
     "react-router-dom": "^6.20.1",
     "react-scripts": "5.0.1",
-    "axios": "^1.6.2",
-    "react-dropzone": "^14.2.3",
-    "react-hook-form": "^7.48.2",
-    "@hookform/resolvers": "^3.3.2",
-    "yup": "^1.4.0",
     "typescript": "^5.3.3",
-    "@types/react": "^18.2.42",
-    "@types/react-dom": "^18.2.17",
-    "web-vitals": "^3.5.0"
+    "web-vitals": "^3.5.0",
+    "yup": "^1.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -53,4 +54,3 @@
     "@types/node": "^20.10.4"
   }
 }
-
