--- a/mobile-app/app/build.gradle
+++ b/mobile-app/app/build.gradle
@@ -82,6 +82,11 @@ dependencies {
     // Gson for TypeConverters
     implementation 'com.google.code.gson:gson:2.10.1'
     
+    // ML Kit for image recognition
+    implementation 'com.google.mlkit:image-labeling:17.0.7'
+    implementation 'com.google.mlkit:object-detection:17.0.1'
+    implementation 'com.google.mlkit:vision-common:17.3.0'
+    
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
