test(e2e): add TestSprite configs and E2E tests; ignore artifacts/uploads/db; keep secrets out of VCS

--- a/.gitignore
+++ b/.gitignore
@@ -331,6 +331,16 @@ coverage/
 test-results/
 junit.xml
 
+# E2E/Test artifacts (do not commit)
+reports/
+artifacts/
+test-output/
+screenshots/
+videos/
+.traces/
+playwright-report/
+.playwright/
+
 # ===========================================
 # Documentation
 # ===========================================
