--- a/admin-dashboard/package.json
+++ b/admin-dashboard/package.json
@@ -11,6 +11,7 @@
     "@mui/material": "^5.15.0",
     "@mui/x-data-grid": "^6.18.0",
     "@reduxjs/toolkit": "^2.0.1",
+    "@supabase/supabase-js": "^2.75.0",
     "@types/react": "^18.2.42",
     "@types/react-dom": "^18.2.17",
     "ajv": "^8.17.1",
