--- a/backend/env.example
+++ b/backend/env.example
@@ -31,3 +31,8 @@ CORS_ORIGIN=http://localhost:3001
 MAX_FILE_SIZE=10485760
 ALLOWED_FILE_TYPES=image/jpeg,image/png,image/gif,image/webp
 
+# Supabase Configuration
+SUPABASE_URL=your-supabase-project-url
+SUPABASE_ANON_KEY=your-supabase-anon-key
+SUPABASE_SERVICE_KEY=your-supabase-service-key
+
