--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,7 @@
     "build": "tsc",
     "test": "jest",
     "test:watch": "jest --watch",
+    "test:testsprite": "jest -c jest.e2e.config.js --runTestsByPath tests/testsprite.e2e.test.ts",
     "test:coverage": "jest --coverage",
     "test:unit": "jest --testPathPattern=tests/.*\\.test\\.ts$",
     "test:integration": "jest --testPathPattern=tests/api\\.test\\.ts$",
@@ -25,6 +26,7 @@
   "author": "TalkAR Team",
   "license": "MIT",
   "dependencies": {
+    "@supabase/supabase-js": "^2.75.0",
     "aws-sdk": "^2.1490.0",
     "axios": "^1.6.2",
     "bcryptjs": "^2.4.3",
@@ -41,14 +43,15 @@
     "uuid": "^9.0.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.23.9",
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
-    "@types/jest": "^29.5.8",
+    "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/morgan": "^1.9.9",
     "@types/multer": "^1.4.11",
-    "@types/node": "^20.10.4",
+    "@types/node": "^20.19.19",
     "@types/pg": "^8.10.9",
     "@types/supertest": "^2.0.16",
     "@types/uuid": "^9.0.7",
@@ -57,7 +60,7 @@
     "eslint": "^8.55.0",
     "jest": "^29.7.0",
     "sqlite3": "^5.1.7",
-    "supertest": "^6.3.3",
+    "supertest": "^6.3.4",
     "ts-jest": "^29.1.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.5"
