--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,9 +5,9 @@ services:
   postgres:
     image: postgres:15
     environment:
-      POSTGRES_DB: talkar_db
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: password
+      POSTGRES_DB: ${POSTGRES_DB:-talkar_db}
+      POSTGRES_USER: ${POSTGRES_USER:-postgres}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:?POSTGRES_PASSWORD not set}
     ports:
       - "5432:5432"
     volumes:
@@ -22,16 +22,16 @@ services:
   supabase:
     image: supabase/supabase:latest
     ports:
-      - "54321:5432"  # Supabase PostgreSQL
-      - "8000:8000"   # Supabase API
-      - "8001:8001"   # Supabase Studio
+      - "54321:5432" # Supabase PostgreSQL
+      - "8000:8000" # Supabase API
+      - "8001:8001" # Supabase Studio
     environment:
-      - POSTGRES_DB=postgres
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgres
-      - JWT_SECRET=your-super-secret-jwt-key-for-supabase
-      - ANON_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InRhbGthcmRldiIsInJvbGUiOiJhbm9uIiwiaWF0IjoxNjI3MjA2NTI0LCJleHAiOjE5NDI3ODI1MjR9.X8LqGK5hKuaKX3Iz2L0QkYI9H7_xJm3fX8x3fGKrQ_8
-      - SERVICE_ROLE_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InRhbGthcmRldiIsInJvbGUiOiJzZXJ2aWNlX3JvbGUiLCJpYXQiOjE2MjcyMDY1MjQsImV4cCI6MTk0Mjc4MjUyNH0.7z5J2xLZhF5nX8q3Y9H1kL2M3N4O5P6Q7R8S9T0U1V2W3X4Y5Z6A7B8C9D0E1F2
+      - POSTGRES_DB=${SUPABASE_POSTGRES_DB:-postgres}
+      - POSTGRES_USER=${SUPABASE_POSTGRES_USER:-postgres}
+      - POSTGRES_PASSWORD=${SUPABASE_POSTGRES_PASSWORD:?SUPABASE_POSTGRES_PASSWORD not set}
+      - JWT_SECRET=${SUPABASE_JWT_SECRET:?SUPABASE_JWT_SECRET not set}
+      - ANON_KEY=${SUPABASE_ANON_KEY:?SUPABASE_ANON_KEY not set}
+      - SERVICE_ROLE_KEY=${SUPABASE_SERVICE_ROLE_KEY:?SUPABASE_SERVICE_ROLE_KEY not set}
     volumes:
       - supabase_data:/var/lib/postgresql/data
     healthcheck:
@@ -46,23 +46,23 @@ services:
     ports:
       - "3000:3000"
     environment:
-      - NODE_ENV=development
-      - DB_HOST=postgres
-      - DB_PORT=5432
-      - DB_NAME=talkar_db
-      - DB_USER=postgres
-      - DB_PASSWORD=password
-      - JWT_SECRET=your-super-secret-jwt-key
-      - SUPABASE_URL=http://supabase:8000
-      - SUPABASE_ANON_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InRhbGthcmRldiIsInJvbGUiOiJhbm9uIiwiaWF0IjoxNjI3MjA2NTI0LCJleHAiOjE5NDI3ODI1MjR9.X8LqGK5hKuaKX3Iz2L0QkYI9H7_xJm3fX8x3fGKrQ_8
-      - SUPABASE_SERVICE_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InRhbGthcmRldiIsInJvbGUiOiJzZXJ2aWNlX3JvbGUiLCJpYXQiOjE2MjcyMDY1MjQsImV4cCI6MTk0Mjc4MjUyNH0.7z5J2xLZhF5nX5q3Y9H1kL2M3N4O5P6Q7R8S9T0U1V2W3X4Y5Z6A7B8C9D0E1F2
-      - AWS_ACCESS_KEY_ID=your-aws-access-key
-      - AWS_SECRET_ACCESS_KEY=your-aws-secret-key
-      - AWS_REGION=us-east-1
-      - AWS_S3_BUCKET=talkar-assets
-      - SYNC_API_URL=https://api.sync.com/v1
-      - SYNC_API_KEY=your-sync-api-key
-      - CORS_ORIGIN=http://localhost:3001
+      - NODE_ENV=${NODE_ENV:-development}
+      - DB_HOST=${DB_HOST:-postgres}
+      - DB_PORT=${DB_PORT:-5432}
+      - DB_NAME=${DB_NAME:-talkar_db}
+      - DB_USER=${DB_USER:-postgres}
+      - DB_PASSWORD=${DB_PASSWORD:?DB_PASSWORD not set}
+      - JWT_SECRET=${JWT_SECRET:?JWT_SECRET not set}
+      - SUPABASE_URL=${SUPABASE_URL:-http://supabase:8000}
+      - SUPABASE_ANON_KEY=${SUPABASE_ANON_KEY:?SUPABASE_ANON_KEY not set}
+      - SUPABASE_SERVICE_KEY=${SUPABASE_SERVICE_ROLE_KEY:?SUPABASE_SERVICE_ROLE_KEY not set}
+      - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID:?AWS_ACCESS_KEY_ID not set}
+      - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY:?AWS_SECRET_ACCESS_KEY not set}
+      - AWS_REGION=${AWS_REGION:-us-east-1}
+      - AWS_S3_BUCKET=${AWS_S3_BUCKET:-talkar-assets}
+      - SYNC_API_URL=${SYNC_API_URL:-https://api.sync.com/v1}
+      - SYNC_API_KEY=${SYNC_API_KEY:?SYNC_API_KEY not set}
+      - CORS_ORIGIN=${CORS_ORIGIN:-http://localhost:3001}
     depends_on:
       postgres:
         condition: service_healthy
@@ -78,9 +78,9 @@ services:
     ports:
       - "3001:3000"
     environment:
-      - REACT_APP_API_URL=http://localhost:3000/api/v1
-      - REACT_APP_SUPABASE_URL=http://localhost:8000
-      - REACT_APP_SUPABASE_ANON_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InRhbGthcmRldiIsInJvbGUiOiJhbm9uIiwiaWF0IjoxNjI3MjA2NTI0LCJleHAiOjE5NDI3ODI1MjR9.X8LqGK5hKuaKX3Iz2L0QkYI9H7_xJm3fX8x3fGKrQ_8
+      - REACT_APP_API_URL=${REACT_APP_API_URL:-http://localhost:3000/api/v1}
+      - REACT_APP_SUPABASE_URL=${REACT_APP_SUPABASE_URL:-http://localhost:8000}
+      - REACT_APP_SUPABASE_ANON_KEY=${REACT_APP_SUPABASE_ANON_KEY:?REACT_APP_SUPABASE_ANON_KEY not set}
     depends_on:
       - backend
       - supabase
@@ -94,8 +94,8 @@ services:
     ports:
       - "3002:3000"
     environment:
-      - STUDIO_PG_META_URL=http://supabase:8000
-      - POSTGRES_PASSWORD=postgres
+      - STUDIO_PG_META_URL=${STUDIO_PG_META_URL:-http://supabase:8000}
+      - POSTGRES_PASSWORD=${SUPABASE_POSTGRES_PASSWORD:?SUPABASE_POSTGRES_PASSWORD not set}
     depends_on:
       - supabase
 
