chore(security): update all environment files and add deployment update guide
- Updated backend/.env and admin-dashboard/.env with new Supabase keys
- Added warnings for key usage
- Added DEPLOYMENT_UPDATE_GUIDE.md for step-by-step environment update
- Updated .env.example and rotation scripts for clarity

--- a/.env.example
+++ b/.env.example
@@ -11,6 +11,11 @@ SUPABASE_POSTGRES_DB=postgres
 SUPABASE_POSTGRES_USER=postgres
 SUPABASE_POSTGRES_PASSWORD=change-me-strong
 SUPABASE_JWT_SECRET=change-me-super-strong-at-least-32-chars
+
+# WARNING: Supabase secret keys (anon, service_role) must ONLY be used in backend/server code.
+# Never expose these keys in frontend, mobile, or client-side code.
+# If you use Supabase in the frontend, use only the anon key and restrict its permissions in Supabase Dashboard.
+# service_role key is highly privileged—never expose to clients.
 # Note: Generate fresh keys for local dev or use Supabase CLI for local setup
 SUPABASE_ANON_KEY=
 SUPABASE_SERVICE_ROLE_KEY=
