--- a/mobile-app/app/build.gradle
+++ b/mobile-app/app/build.gradle
@@ -116,6 +116,11 @@ dependencies {
     implementation 'com.google.mlkit:object-detection:17.0.1'
     implementation 'com.google.mlkit:vision-common:17.3.0'
     
+    // ExoPlayer for video playback
+    implementation 'androidx.media3:media3-exoplayer:1.2.0'
+    implementation 'androidx.media3:media3-ui:1.2.0'
+    implementation 'androidx.media3:media3-common:1.2.0'
+    
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
