--- a/mobile-app/app/build.gradle
+++ b/mobile-app/app/build.gradle
@@ -86,6 +86,15 @@ dependencies {
     implementation 'com.google.ar:core:1.41.0'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.7.0'
     
+    // Sceneform for 3D model rendering (GLB/GLTF support)
+    implementation 'com.google.ar.sceneform:core:1.17.1'
+    implementation 'com.google.ar.sceneform:animation:1.17.1'
+    implementation 'com.google.ar.sceneform.ux:sceneform-ux:1.17.1'
+    
+    // 3D model format support
+    implementation 'de.javagl:obj:0.3.0' // OBJ model support
+    implementation 'com.google.android.filament:filament-android:1.41.0' // Filament rendering engine
+    
     // Networking
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
