--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,41 +1,22 @@
 repos:
-  # Detect secrets in code
   - repo: https://github.com/Yelp/detect-secrets
-    rev: v1.4.0
+    rev: v1.5.0
     hooks:
       - id: detect-secrets
         args: ["--baseline", ".secrets.baseline"]
-        exclude: |
-          (?x)^(
-            package-lock.json|
-            npm-shrinkwrap.json|
-            yarn.lock|
-            pnpm-lock.yaml|
-            .*\.md|
-            SECURITY_ROTATION_GUIDE.md|
-            SECURITY_INCIDENT_RESPONSE.md
-          )$
+        exclude: package-lock.json
 
-  # Gitleaks for secret scanning
-  - repo: https://github.com/gitleaks/gitleaks
-    rev: v8.18.0
-    hooks:
-      - id: gitleaks
-        args: ["--verbose"]
-
-  # Check for private keys
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.5.0
+    rev: v4.3.0
     hooks:
-      - id: detect-private-key
       - id: check-added-large-files
-        args: ["--maxkb=500"]
+      - id: check-case-conflict
       - id: check-merge-conflict
+      - id: check-symlinks
       - id: check-yaml
-      - id: check-json
       - id: end-of-file-fixer
-      - id: trailing-whitespace
       - id: mixed-line-ending
+      - id: trailing-whitespace
 
   # TypeScript/JavaScript linting
   - repo: https://github.com/pre-commit/mirrors-eslint
