--- a/admin-dashboard/package.json
+++ b/admin-dashboard/package.json
@@ -31,6 +31,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "test:e2e": "FRONTEND_URL=http://localhost:3002 start-server-and-test \"PORT=3002 react-scripts start\" http://localhost:3002 \"playwright test\"",
     "lint": "eslint src --ext .js,.jsx,.ts,.tsx",
     "eject": "react-scripts eject"
   },
@@ -57,6 +58,8 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
     "@types/jest": "^29.5.5",
-    "@types/node": "^20.10.4"
+    "@types/node": "^20.10.4",
+    "@playwright/test": "^1.47.2",
+    "start-server-and-test": "^2.0.8"
   }
 }
