--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,8 @@
     "build": "tsc",
     "test": "jest",
     "test:watch": "jest --watch",
-    "test:testsprite": "jest -c jest.e2e.config.js --runTestsByPath tests/testsprite.e2e.test.ts",
+    "test:api": "npm run test:testsprite",
+    "test:testsprite": "JEST_JUNIT_OUTPUT=./test-results/junit.xml jest -c jest.e2e.config.js --reporters=default --reporters=jest-junit --runTestsByPath tests/testsprite.e2e.test.ts",
     "test:coverage": "jest --coverage",
     "test:unit": "jest --testPathPattern=tests/.*\\.test\\.ts$",
     "test:integration": "jest --testPathPattern=tests/api\\.test\\.ts$",
@@ -59,6 +60,7 @@
     "@typescript-eslint/parser": "^6.13.1",
     "eslint": "^8.55.0",
     "jest": "^29.7.0",
+    "jest-junit": "^16.0.0",
     "sqlite3": "^5.1.7",
     "supertest": "^6.3.4",
     "ts-jest": "^29.1.1",
