--- a/backend/package.json
+++ b/backend/package.json
@@ -7,13 +7,13 @@
     "start": "node dist/index.js",
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
     "build": "tsc",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage",
-    "test:unit": "jest --testPathPattern=tests/.*\\.test\\.ts$",
-    "test:integration": "jest --testPathPattern=tests/api\\.test\\.ts$",
-    "test:performance": "jest --testPathPattern=tests/performance\\.test\\.ts$",
-    "lint": "eslint src/**/*.ts",
+    "test": "NODE_ENV=test jest",
+    "test:watch": "NODE_ENV=test jest --watch",
+    "test:coverage": "NODE_ENV=test jest --coverage",
+    "test:unit": "NODE_ENV=test jest --testPathPattern=tests/.*\\.test\\.ts$",
+    "test:integration": "NODE_ENV=test jest --testPathPattern=tests/api\\.test\\.ts$",
+    "test:performance": "NODE_ENV=test jest --testPathPattern=tests/performance\\.test\\.ts$",
+    "lint": "eslint src/**/*.ts --max-warnings 0",
     "lint:fix": "eslint src/**/*.ts --fix"
   },
   "keywords": [
