--- a/backend/package.json
+++ b/backend/package.json
@@ -82,6 +82,10 @@
     ],
     "setupFilesAfterEnv": [
       "<rootDir>/src/tests/setup.ts"
+    ],
+    "testPathIgnorePatterns": [
+      "/node_modules/",
+      "/dist/"
     ]
   }
 }
