--- a/mobile-app/app/build.gradle
+++ b/mobile-app/app/build.gradle
@@ -116,7 +116,15 @@ dependencies {
     implementation 'com.google.mlkit:object-detection:17.0.1'
     implementation 'com.google.mlkit:vision-common:17.3.0'
     
+    // ExoPlayer for audio streaming
+    implementation 'androidx.media3:media3-exoplayer:1.2.1'
+    implementation 'androidx.media3:media3-ui:1.2.1'
+    
     testImplementation 'junit:junit:4.13.2'
+    testImplementation 'org.mockito:mockito-core:5.7.0'
+    testImplementation 'org.robolectric:robolectric:4.11.1'
+    testImplementation 'androidx.arch.core:core-testing:2.2.0'
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.7.3'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     androidTestImplementation platform('androidx.compose:compose-bom:2023.10.01')
