--- a/admin-dashboard/package.json
+++ b/admin-dashboard/package.json
@@ -61,6 +61,7 @@
   "overrides": {
     "nth-check": "^2.1.1",
     "postcss": "^8.4.49",
-    "webpack-dev-server": "^5.2.1"
+    "webpack": "^5.94.0",
+    "webpack-dev-server": "^4.15.1"
   }
 }
