--- a/admin-dashboard/package.json
+++ b/admin-dashboard/package.json
@@ -22,6 +22,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^6.28.0",
     "react-scripts": "^5.0.1",
+    "recharts": "^3.3.0",
     "typescript": "^4.9.5",
     "web-vitals": "^4.2.4",
     "yup": "^1.6.1"
