--- a/backend/package.json
+++ b/backend/package.json
@@ -38,6 +38,7 @@
     "multer": "^2.0.2",
     "pg": "^8.13.1",
     "sequelize": "^6.37.5",
+    "socket.io": "^4.8.1",
     "uuid": "^11.0.3"
   },
   "devDependencies": {
