--- a/admin-dashboard/package.json
+++ b/admin-dashboard/package.json
@@ -23,6 +23,7 @@
     "react-router-dom": "^6.28.0",
     "react-scripts": "^5.0.1",
     "recharts": "^3.3.0",
+    "socket.io-client": "^4.8.1",
     "typescript": "^4.9.5",
     "web-vitals": "^4.2.4",
     "yup": "^1.6.1"
