--- a/backend/package.json
+++ b/backend/package.json
@@ -14,7 +14,8 @@
     "test:integration": "NODE_ENV=test jest --testPathPattern=tests/api\\.test\\.ts$",
     "test:performance": "NODE_ENV=test jest --testPathPattern=tests/performance\\.test\\.ts$",
     "lint": "eslint src/**/*.ts --max-warnings 0",
-    "lint:fix": "eslint src/**/*.ts --fix"
+    "lint:fix": "eslint src/**/*.ts --fix",
+    "supabase:keepalive": "node scripts/supabase-keepalive.js"
   },
   "keywords": [
     "ar",
@@ -45,14 +46,17 @@
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
-    "@types/cors": "^2.8.17",
-    "@types/express": "^4.17.21",
+    "@types/cors": "^2.8.19",
+    "@types/express": "^4.17.25",
     "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.7",
-    "@types/morgan": "^1.9.9",
+    "@types/lru-cache": "^7.10.9",
+    "@types/morgan": "^1.9.10",
     "@types/multer": "^1.4.12",
-    "@types/node": "^22.10.2",
+    "@types/node": "^22.19.1",
     "@types/pg": "^8.11.10",
+    "@types/sequelize": "^4.28.20",
+    "@types/socket.io": "^3.0.1",
     "@types/supertest": "^6.0.2",
     "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^8.18.1",
