--- a/backend/package.json
+++ b/backend/package.json
@@ -32,6 +32,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "express-rate-limit": "^8.2.1",
     "helmet": "^8.0.0",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
@@ -42,12 +43,14 @@
     "sequelize": "^6.37.5",
     "socket.io": "^4.8.1",
     "uuid": "^11.1.0",
-    "validator": "^13.15.20"
+    "validator": "^13.15.20",
+    "winston": "^3.18.3"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.19",
     "@types/express": "^4.17.25",
+    "@types/express-rate-limit": "^5.1.3",
     "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/lru-cache": "^7.10.9",
