--- a/backend/package.json
+++ b/backend/package.json
@@ -10,10 +10,10 @@
     "test": "NODE_ENV=test jest",
     "test:watch": "NODE_ENV=test jest --watch",
     "test:coverage": "NODE_ENV=test jest --coverage",
-    "test:unit": "NODE_ENV=test jest --testPathPattern=tests/.*\\.test\\.ts$",
-    "test:integration": "NODE_ENV=test jest --testPathPattern=tests/api\\.test\\.ts$",
-    "test:performance": "NODE_ENV=test jest --testPathPattern=tests/performance\\.test\\.ts$",
-    "lint": "eslint src/**/*.ts --max-warnings 0",
+    "test:unit": "NODE_ENV=test jest --testPathPattern=src/tests/.*\\.test\\.ts$",
+    "test:integration": "NODE_ENV=test jest --runInBand --testPathPattern=tests/.*\\.test\\.ts$",
+    "test:performance": "NODE_ENV=test jest --runInBand --testPathPattern=tests/performance.*\\.test\\.ts$",
+    "lint": "eslint src/**/*.ts",
     "lint:fix": "eslint src/**/*.ts --fix",
     "supabase:keepalive": "node scripts/supabase-keepalive.js"
   },
