--- a/mobile-app/app/src/main/AndroidManifest.xml
+++ b/mobile-app/app/src/main/AndroidManifest.xml
@@ -27,6 +27,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.TalkAR"
         android:usesCleartextTraffic="true"
+        android:hardwareAccelerated="true"
         tools:targetApi="31">
         
         <activity
