--- a/mobile-app/app/build.gradle
+++ b/mobile-app/app/build.gradle
@@ -22,7 +22,7 @@ android {
 
     // Allow overriding API host/protocol via project properties (e.g., -PAPI_HOST=... or in gradle.properties)
     def apiProtocolDebug = project.hasProperty('API_PROTOCOL') ? project.API_PROTOCOL : 'http'
-    def apiHostDebug = project.hasProperty('API_HOST') ? project.API_HOST : 'localhost'
+    def apiHostDebug = project.hasProperty('API_HOST') ? project.API_HOST : '10.0.2.2'
     // Ports should be integers for buildConfigField "int"
     def apiPortDebug = project.hasProperty('API_PORT') ? project.API_PORT.toInteger() : 4000
     def apiVersion = project.hasProperty('API_VERSION') ? project.API_VERSION : 'v1'
@@ -109,6 +109,13 @@ dependencies {
     // ARCore (modern approach without Sceneform)
     implementation 'com.google.ar:core:1.41.0'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.7.0'
+
+    // CameraX
+    def camerax_version = "1.3.1"
+    implementation "androidx.camera:camera-core:${camerax_version}"
+    implementation "androidx.camera:camera-camera2:${camerax_version}"
+    implementation "androidx.camera:camera-lifecycle:${camerax_version}"
+    implementation "androidx.camera:camera-view:${camerax_version}"
     
     // Networking
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
