--- a/mobile-app/app/build.gradle
+++ b/mobile-app/app/build.gradle
@@ -144,9 +144,11 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.10.1'
     
     // ML Kit for image recognition
+    implementation 'com.google.mlkit:face-detection:16.1.6'
     implementation 'com.google.mlkit:image-labeling:17.0.7'
     implementation 'com.google.mlkit:object-detection:17.0.1'
     implementation 'com.google.mlkit:vision-common:17.3.0'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.7.3'
     
     // ExoPlayer for audio streaming
     implementation 'androidx.media3:media3-exoplayer:1.2.1'
