--- a/backend/package.json
+++ b/backend/package.json
@@ -38,7 +38,8 @@
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "multer": "^2.0.2",
-    "openai": "^6.7.0",
+    "ngrok": "^5.0.0-beta.2",
+
     "pg": "^8.13.1",
     "sequelize": "^6.37.5",
     "socket.io": "^4.8.1",
