chore: cleanup diagnostic log files - Remove interaction_flow_check.txt and interaction_log.txt from version control - Add log files to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -346,3 +346,7 @@ docs/_build/
 *.old
 *.orig
 .aider*
+interaction_flow_check.txt
+interaction_flow_check.txt
+interaction_flow_check.txt
+interaction_log.txt
