Fix ARCore manifest merger conflict
- Add tools:replace for ARCore metadata
- Resolves conflict with Sceneview library

--- a/mobile-app/app/src/main/AndroidManifest.xml
+++ b/mobile-app/app/src/main/AndroidManifest.xml
@@ -42,8 +42,11 @@
             </intent-filter>
         </activity>
         
-        <!-- ARCore metadata -->
-        <meta-data android:name="com.google.ar.core" android:value="required" />
+        <!-- ARCore metadata - Override Sceneview's optional value -->
+        <meta-data 
+            android:name="com.google.ar.core" 
+            android:value="required"
+            tools:replace="android:value" />
     </application>
 </manifest>
 
