--- a/mobile-app/app/build.gradle
+++ b/mobile-app/app/build.gradle
@@ -130,6 +130,9 @@ dependencies {
     // ARCore with Sceneview for 3D rendering
     implementation 'com.google.ar:core:1.43.0'
     implementation 'io.github.sceneview:arsceneview:2.2.1'
+    
+    // Sceneform removed due to Filament version conflict with Sceneview
+    // Using custom Filament-based video renderer instead
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.7.0'
 
     // CameraX
@@ -175,6 +178,7 @@ dependencies {
     
     // ExoPlayer for video playback
     implementation 'androidx.media3:media3-exoplayer:1.2.1'
+    implementation 'androidx.media3:media3-ui:1.2.1' // For PlayerView
     implementation 'androidx.media3:media3-ui:1.2.1'
     
     testImplementation 'junit:junit:4.13.2'
