--- a/mobile-app/app/build.gradle
+++ b/mobile-app/app/build.gradle
@@ -101,6 +101,13 @@ android {
         kotlinCompilerExtensionVersion '1.5.3'
     }
     
+    // Configure JUnit 5 for Kotest
+    testOptions {
+        unitTests.all {
+            useJUnitPlatform()
+        }
+    }
+    
     lint {
         disable 'UnsafeOptInUsageError'
     }
@@ -187,6 +194,11 @@ dependencies {
     testImplementation 'androidx.arch.core:core-testing:2.2.0'
     testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.7.3'
     testImplementation 'androidx.test:core:1.5.0'
+    
+    // Kotest for property-based testing
+    testImplementation 'io.kotest:kotest-runner-junit5:5.8.0'
+    testImplementation 'io.kotest:kotest-assertions-core:5.8.0'
+    testImplementation 'io.kotest:kotest-property:5.8.0'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     androidTestImplementation platform('androidx.compose:compose-bom:2023.10.01')
